# face-api

./: .gitignore  README.md
Applications/Android/CameraModule/: .gitignore  CMakeLists.txt  build.gradle
Applications/Android/CameraModule/src/main/: AndroidManifest.xml
Applications/Android/CameraModule/src/main/assets/FaceApp/: settings.json
Applications/Android/CameraModule/src/main/assets/FaceApp/shapemodel/: face2.tracker
Applications/Android/CameraModule/src/main/cpp/: Bridge.cpp  native-lib.cpp
Applications/Android/CameraModule/src/main/java/com/face/activity/: BaseActivity.java  BasePhotoActivity.java  CameraActivity.java  PhotoActivity.java
Applications/Android/CameraModule/src/main/java/com/face/common/: Assets.java  CachedValue.java  Configuration.java  Constants.java  Native.java
Applications/Android/CameraModule/src/main/java/com/face/common/adapter/: BaseListAdapter.java  ObjectToStringAdapter.java
Applications/Android/CameraModule/src/main/java/com/face/common/camera/: FlashMode.java  FocusMode.java  PictureSize.java  Ratio.java
Applications/Android/CameraModule/src/main/java/com/face/common/image/: ImageManager.java  ImageTarget.java  ImageTargetCallback.java  ManagedTarget.java  PhotoUtil.java  RotatePhotoTask.java  SavePhotoTask.java  SavingPhotoTask.java  ScaleTransformation.java
Applications/Android/CameraModule/src/main/java/com/face/control/: CameraView.java  FocusView.java  PhotoView.java
Applications/Android/CameraModule/src/main/java/com/face/event/: Event.java  EventArgs.java  FlashModeArgs.java  FocusModeArgs.java  FocusedArgs.java  IEvent.java  IEventHandler.java  PhotoSavedArgs.java  PictureSizeArgs.java  ZoomChangedArgs.java
Applications/Android/CameraModule/src/main/java/com/face/fragment/: BaseDialogFragment.java  BaseFragment.java  CameraFragment.java  PhotoFragment.java  SettingsFragment.java
Applications/Android/CameraModule/src/main/java/com/face/interfaces/: StorageCallback.java
Applications/Android/CameraModule/src/main/java/com/face/view/: CameraView.java  FocusView.java  PhotoView.java
Applications/Android/CameraModule/src/main/java/com/squareup/picasso/: PicassoTools.java
Applications/Android/CameraModule/src/main/java/com/yalantis/cameramodule/activity/: BaseActivity.java  BasePhotoActivity.java  CameraActivity.java  PhotoPreviewActivity.java
Applications/Android/CameraModule/src/main/java/com/yalantis/cameramodule/common/: Assets.java  CachedValue.java  Configuration.java  Constants.java
Applications/Android/CameraModule/src/main/java/com/yalantis/cameramodule/control/: CameraPreview.java  FocusView.java  PinchImageView.java  PreviewImageView.java
Applications/Android/CameraModule/src/main/java/com/yalantis/cameramodule/event/: Event.java  EventArgs.java  FlashModeArgs.java  FocusModeArgs.java  FocusedArgs.java  IEvent.java  IEventHandler.java  PictureSizeArgs.java  ZoomChangedArgs.java
Applications/Android/CameraModule/src/main/java/com/yalantis/cameramodule/fragment/: BaseDialogFragment.java  BaseFragment.java  CameraFragment.java  CameraSettingsDialogFragment.java  PhotoPreviewFragment.java
Applications/Android/CameraModule/src/main/res/drawable/: bg_transparent_clickable.xml  camera_capture.xml  camera_change.xml  icon_aperture_res.xml  icon_camera_res.xml  icon_face_recognition_res.xml  icon_settings_res.xml  icon_switch_camera_res.xml  icon_synchronize_res.xml  icon_trash_res.xml
Applications/Android/CameraModule/src/main/res/layout/: activity_camera.xml  activity_photo.xml  activity_with_fragment.xml  dialog_camera_params.xml  dialog_settings.xml  fragment_camera.xml  fragment_photo.xml  fragment_photo_preview.xml  object_to_string_dropdown_list_item.xml
Applications/Android/CameraModule/src/main/res/menu/: photo_preview_options.xml
Applications/Android/CameraModule/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml
FaceApi/: CMakeLists.txt  FaceApi.cpp  FaceApi.h
FaceApi/Common/: Configuration.cpp  Configuration.h  PoseUtil.cpp  PoseUtil.h  ShapeUtil.cpp  ShapeUtil.h
FaceApi/Framework/: Event.hpp  Exception.cpp  Exception.h  FlowGraph.cpp  FlowGraph.hpp  Functional.hpp  Message.cpp  Message.h  MessageQueue.hpp  Module.cpp  Module.h  Port.hpp  Profiler.cpp  Profiler.h  Stopwatch.cpp  Stopwatch.h  Thread.cpp  Thread.h  Tuple.hpp  Util.cpp  Util.h  UtilOCV.cpp  UtilOCV.h  UtilString.cpp  UtilString.h  VideoWriter.cpp  VideoWriter.h
FaceApi/Graph/: GeneralGraph.cpp  GeneralGraph.h  Graph.cpp  Graph.h
FaceApi/Messages/: ActiveUsersMessage.cpp  ActiveUsersMessage.h  CommandMessage.cpp  CommandMessage.h  ImageArrivedMessage.cpp  ImageArrivedMessage.h  ImageMessage.cpp  ImageMessage.h  ImageSizeChangedMessage.cpp  ImageSizeChangedMessage.h  RoiMessage.cpp  RoiMessage.h  UserEntriesMessage.cpp  UserEntriesMessage.h
FaceApi/Modules/: ModuleConnector.cpp  ModuleConnector.h  ModuleFactory.cpp  ModuleFactory.h  ModuleGraph.cpp  ModuleGraph.h
FaceApi/Modules/FaceDetection/: FaceDetection.cpp  FaceDetection.h
FaceApi/Modules/FirstModule/: FirstModule.cpp  FirstModule.h
FaceApi/Modules/General/: FirstModule.cpp  FirstModule.h  LastModule.cpp  LastModule.h  ModuleWithPort.hpp
FaceApi/Modules/Graph/: Graph.cpp  Graph.h
FaceApi/Modules/ImageQueue/: ImageQueue.cpp  ImageQueue.h
FaceApi/Modules/LastModule/: LastModule.cpp  LastModule.h
FaceApi/Modules/UserHistory/: UserHistory.cpp  UserHistory.h
FaceApi/Modules/UserManager/: UserManager.cpp  UserManager.h
FaceApi/Modules/UserProcessor/: UserProcessor.cpp  UserProcessor.h
FaceApi/Modules/UserProcessor/HeadPose/: PoseEstimationDispatcher.cpp  PoseEstimationDispatcher.h
FaceApi/Modules/UserProcessor/ShapeModel/: ClmWrapper.cpp  ClmWrapper.h  ShapeModel.cpp  ShapeModel.h  ShapeModelDispatcher.cpp  ShapeModelDispatcher.h
FaceApi/Modules/UserProcessor/ShapeNorm/: ShapeNormDispatcher.cpp  ShapeNormDispatcher.h
FaceApi/Modules/Visualizer/: Visualizer.cpp  Visualizer.h
FaceApi/User/: User.cpp  User.h  UserData.cpp  UserData.hpp  UserDispatcher.hpp
Testing/: copy_config.bat
(+101 files in other folders)
